--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-_site
-.sass-cache
+# ===== Start Jekyll.gitignore =====
+_site/
+.sass-cache/
 .jekyll-metadata
+Gemfile.lock
+# ===== End Jekyll.gitignore =====
