--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,35 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Latah County
+email: webmaster@latah.id.us
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://latah.id.us" # the base hostname & protocol for your site
+
+# Where things are.
+include:
+  - _pages
+  - _dept
+
+assets:
+  prefix: "/assets"
+  sources:
+    -   _assets/css
+    -   _assets/img
+    -   _assets/js
+  compress:
+    css: sass
+    js: uglifier
+  features:
+    automatic_img_alt: true
+    automatic_img_size: false
 
 # Build settings
 markdown: kramdown
+
+# Gems
+gems: [jekyll-assets]
