Added blank posting for use as a template.

--- a/_data/jobpostings.yml
+++ b/_data/jobpostings.yml
@@ -1,3 +1,15 @@
+Blank:
+  - jobTitle:
+    jobStatus:
+    jobDepartment:
+    jobMinSalary:
+    jobHours:
+    jobDescription:
+    jobSalaryRange:
+    jobRequired:
+    jobLinks:
+    jobApplication:
+
 sheriff:
   - jobTitle: Patrol Deputy
     jobStatus: Open - Accepting Applications
