--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ include:
   - _dept
   - _admin
 
+# Jekyll Assets settings
 assets:
   prefix: "/assets"
   sources:
@@ -34,8 +35,18 @@ assets:
     automatic_img_alt: true
     automatic_img_size: false
 
+# Jekyll Cloudinary settings
+cloudinary:
+  presets:
+    officials:
+      max_width: 600
+      attributes:
+        class: "img-responsive img-thumbnail"
+
 # Build settings
 markdown: kramdown
 
 # Gems
-gems: [jekyll-assets]
+gems:
+  - jekyll-assets
+  - jekyll-cloudinary
