--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,29 @@ assets:
 cloudinary:
   cloud_name: latah-county-its
   presets:
-    officials:
-      max_width: 500
+    default:
       attributes:
-        class: "img-responsive img-thumbnail"
+        class: "img img-responsive"
+    officials:
+      max_width: 300
+      attributes:
+        class: "img img-responsive img-thumbnail center-block hidden-xs"
+        width: "300"
+    officials_thumb:
+      max_width: 300
+      attributes:
+        class: "img img-responsive img-thumbnail center-block hidden-xs"
+        width: "250"
+    logo_sm:
+      max_width: 320
+      attributes:
+        class: "img img-responsive"
+        id: "logo_sm"
+    stateseal:
+      max_width: 320
+      attributes:
+        class: "img img-responsive"
+        id: "stateseal"
 
 # Build settings
 markdown: kramdown
