Updated Commissioners Bios.

--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -2,7 +2,13 @@ commissioners:
   - name: Dick Walser
     description: >
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.
+        Richard Walser was born in Moscow and grew up on a farm between Potlatch and Viola.  He attended grade school and high school in Potlatch and graduated from the University of Idaho with a degree in Architecture.  Rather than pursue a career in architecture however, Richard returned to the farm where he farmed and raised cattle for over 30 years.  During that time he served on the boards of several farm organizations.
+      </p>
+      <p>
+        After retiring from farming, Richard then begin working part time at Tri-State in the hardware department.  He is pleased to report that while his wealth made no dramatic change at that job, he now owns every hand tool known to man.
+      </p>
+      <p>
+        He and his wife, Vicki, still reside in their farm home.  However, the only livestock they still care for is their dog, "Buster".  Richard is currently serving in his 2ns term as one of the Latah County Commissioners, a job he is happy and humbled to do !
       </p>
     district: District 1
     page: /commissioners/district_1/
@@ -30,7 +36,7 @@ commissioners:
     district: District 3
     description: >
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.
+        After graduating Moscow high school in 1979, Dave McGraw worked in the auto, truck, and farm implement parts business for 15 years where he developed a passion for small business. Following his passion for business, he began purchasing cable TV systems in 1995, at the height of the business he owned and operated cable TV and Internet systems in 4 states: Idaho, Washington, Texas and New Mexico. Following his retirement from the Cable industry he became involved with local Government serving first on the Troy City Council for 3 years and then as a Latah County Commissioner where he is currently serving his 3rd term. Dave and his wife Leslie of 25 years have 5 kids and 7 grandkids.
       </p>
     page: /commissioners/district_3/
     bio: /commissioners/bio/dave_mcgraw/
