--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,12 @@ assets:
     automatic_img_alt: true
     automatic_img_size: false
 
+# Algolia Search settings
+algolia:
+  application_id: 'R8C7303OK6'
+  index_name:     'website'
+  read_only_api_key: '6174a14ffe09003780dfe482ca8c47c0'
+
 # Jekyll Cloudinary settings
 cloudinary:
   cloud_name: latah-county-its
@@ -72,4 +78,5 @@ markdown: kramdown
 # Gems
 plugins:
   - jekyll-assets
+  - algoliasearch-jekyll
   - jekyll-cloudinary
