--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -43,7 +43,7 @@ commissioners:
     image: /img/DaveMcGraw.png
 
 assessor:
-  - name: Pat Vaughn
+  - name: Pat Vaughan
     description: >
       <p>
         Patrick J. Vaughan was born and raised in Boise, Idaho. He graduated in 1977 from the United States Military Academy, West Point, and served over 20 years in the U.S. Army.
