--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -57,7 +57,7 @@ Departments:
     url: /treasurer/
   - title: Veteran's Services
     url: /veterans_services/
-  - title: Noxios Weed Control
+  - title: Noxious Weed Control
     url: /weed_control/
   - title: Youth Advocacy
     url: /youth_advocacy/
