Added DMV content, minor tweak to SW page.

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -11,3 +11,10 @@
   target: _blank
   home: false
   expire:
+
+  department: DMV
+  title: Register your vehicle online in Latah County
+  url: https://itd.idaho.gov/itddmv/
+  target: _blank
+  home: false
+  expire:
