--- a/_data/notices.yaml
+++ b/_data/notices.yaml
@@ -46,3 +46,10 @@
   target: _blank
   home: false
   expire:
+
+  department: DMV
+  title: Registering a Boat in 2017? New Requirements!
+  url: https://www.latah.id.us/assessor/Boat_press_release.pdf
+  target: _blank
+  home: false
+  expire:
