--- a/_data/contacts.yaml
+++ b/_data/contacts.yaml
@@ -138,6 +138,16 @@
     327 East Second Street<br />
     Moscow, ID 83843
 
+- department: Noxious Weed Control
+  email: weed@latah.id.us
+  phone: (208) 883-7210
+  fax: (208) 883-8505
+  address: >
+    Latah County Annex<br />
+    200 S Almon Street<br />
+    Moscow, ID 83843<br />
+    Suite 105
+
 - department: Parks & Rec
   email: parks@latah.id.us
   phone: (208) 883-5709
@@ -157,7 +167,7 @@
     Moscow, Idaho 83843<br />
     Room 205
 
-- department: Probation
+- department: Probation &amp; Youth Services
   email: ys@latah.id.us
   phone: (208) 883-2277
   fax: (208) 883-3357
@@ -166,16 +176,6 @@
     522 S Adams<br />
     Moscow, Idaho 83843<br />
     Room 203
-
-- department: Youth Services
-  email: ys@latah.id.us
-  phone: (208) 883-2277
-  fax: (208) 883-3357
-  address: >
-    Latah County Courthouse<br />
-    522 S Adams<br />
-    Moscow, Idaho 83843<br />
-    Room 202
 
 - department: Prosecutor
   email: pa@latah.id.us
@@ -265,16 +265,6 @@
     Monday - Friday<br />
     8:30 a.m. - 12:00 p.m.<br />
     1:00 p.m. - 4:30 p.m.
-
-- department: Weeds
-  email: weed@latah.id.us
-  phone: (208) 883-7210
-  fax: (208) 883-8505
-  address: >
-    Latah County Annex<br />
-    200 S Almon Street<br />
-    Moscow, ID 83843<br />
-    Suite 105
 
 - department: Youth Advocacy
   email: lcyac@latah.id.us
